- ENHANCEMENT: made foreground and background layers work - ENHANCEMENT: fix the transparency so that the selected layer has 50% transparency and the previous layer is behind it - removed draw on me layer - ENHANCEMENT: added a transparent block - re-calculating z-index when selecting a new block

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,12 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
 }
 
+.constructor-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #constructor-layers-container .buttons-container {
   margin-bottom: 20px;
 }
@@ -173,25 +179,16 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+#constructor-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #constructor-area-shadow {
-  opacity: .5;
   position: absolute;
   top: 0;
   left: 0;
-  display: none;
-}
-
-#constructor-area-draw-on-me, #main-area-draw-on-me {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  top: 0;
-  left: 0;
-}
-
-#main-area-draw-on-me {
-  width: 900px;
-  height: 300px;
 }
 
 #constructor-color-palette {
